[package]
name = "ci-utils"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic-build = { version = "*", features = ["prost"] }
reqwest = { version = "*", features = ["blocking"] }
serde_json = { version = "*" }
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "base64",
] }
