[package]
name = "ci-utils"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic-build = { version = "*", features = ["prost"] }
reqwest = { version = "*", features = ["blocking"] }
serde_json = { version = "*" }
base64 = { version = "*" }
